--- a/Projeto POO2/.classpath
+++ b/Projeto POO2/.classpath
@@ -10,5 +10,7 @@
 	<classpathentry kind="lib" path="sqljdbc4.jar"/>
 	<classpathentry kind="lib" path="C:/ads/sqldeveloper/jdbc/lib/ojdbc6.jar"/>
 	<classpathentry kind="lib" path="C:/oraclexe/app/oracle/product/11.2.0/server/jdbc/lib/ojdbc5.jar"/>
+	<classpathentry kind="lib" path="C:/Users/joaopaulo/Desktop/Softwares/sqldeveloper/jdbc/lib/ojdbc6.jar"/>
+	<classpathentry kind="lib" path="lib/ojdbc6.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
